// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas em <GifExpertApp debe de mostrar correctamente 1`] = `
<Fragment>
  <h2
    className="title animate__animated animate__fadeIn"
  >
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
  <footer>
    <p
      className="title"
    >
      Alexis Castellanos
    </p>
  </footer>
</Fragment>
`;

exports[`Pruebas em <GifExpertApp debe de mostrar una vista de categoris 1`] = `
<Fragment>
  <h2
    className="title animate__animated animate__fadeIn"
  >
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Punch"
      key="One Punch"
    />
    <GifGrid
      category="Dragon ball"
      key="Dragon ball"
    />
  </ol>
  <footer>
    <p
      className="title"
    >
      Alexis Castellanos
    </p>
  </footer>
</Fragment>
`;
